Practica2/Practica2/obj/Debug/sicxeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\crpep\OneDrive - Universidad Autonoma de San Luis Potosi - UASLP\Laboratorio\practica 3 nohemi\Practica2\Practica2\sicxe.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Practica2 {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class sicxeParser : Parser {
	public const int
		CODOPF1=1, CODOPF2=2, CODOPF3=3, REG=4, START=5, BYTE=6, WORD=7, RESB=8, 
		RESW=9, BASE=10, END=11, SEP=12, F4=13, EBSILON=14, IND=15, INM=16, CONSTHEX=17, 
		CONSTCAD=18, NUMERO2=19, ID=20, FINL=21;
	public const int
		RULE_programa = 0, RULE_inicio = 1, RULE_fin = 2, RULE_entrada = 3, RULE_proposiciones = 4, 
		RULE_proposicion = 5, RULE_instruccion = 6, RULE_directiva = 7, RULE_tipoDirectiva = 8, 
		RULE_etiqueta = 9, RULE_opinstruccion = 10, RULE_formato = 11, RULE_formatoUno = 12, 
		RULE_formatoDos = 13, RULE_formatoTres = 14, RULE_formatoCuatro = 15, 
		RULE_simple3 = 16, RULE_indirecto3 = 17, RULE_inmediato3 = 18, RULE_opDirectiva = 19, 
		RULE_registro = 20;
	public static readonly string[] ruleNames = {
		"programa", "inicio", "fin", "entrada", "proposiciones", "proposicion", 
		"instruccion", "directiva", "tipoDirectiva", "etiqueta", "opinstruccion", 
		"formato", "formatoUno", "formatoDos", "formatoTres", "formatoCuatro", 
		"simple3", "indirecto3", "inmediato3", "opDirectiva", "registro"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'START'", "'BYTE'", "'WORD'", "'RESB'", 
		"'RESW'", "'BASE'", "'END'", "', '", "'+'", null, "'@'", "'#'", null, 
		null, null, null, "'\n'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "CODOPF1", "CODOPF2", "CODOPF3", "REG", "START", "BYTE", "WORD", 
		"RESB", "RESW", "BASE", "END", "SEP", "F4", "EBSILON", "IND", "INM", "CONSTHEX", 
		"CONSTCAD", "NUMERO2", "ID", "FINL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "sicxe.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public sicxeParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramaContext : ParserRuleContext {
		public InicioContext inicio() {
			return GetRuleContext<InicioContext>(0);
		}
		public ProposicionesContext proposiciones() {
			return GetRuleContext<ProposicionesContext>(0);
		}
		public FinContext fin() {
			return GetRuleContext<FinContext>(0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_programa; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterPrograma(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitPrograma(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrograma(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramaContext programa() {
		ProgramaContext _localctx = new ProgramaContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_programa);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; inicio();
			State = 43; proposiciones();
			State = 44; fin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InicioContext : ParserRuleContext {
		public ITerminalNode START() { return GetToken(sicxeParser.START, 0); }
		public ITerminalNode NUMERO2() { return GetToken(sicxeParser.NUMERO2, 0); }
		public ITerminalNode FINL() { return GetToken(sicxeParser.FINL, 0); }
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode[] EBSILON() { return GetTokens(sicxeParser.EBSILON); }
		public ITerminalNode EBSILON(int i) {
			return GetToken(sicxeParser.EBSILON, i);
		}
		public ProposicionContext proposicion() {
			return GetRuleContext<ProposicionContext>(0);
		}
		public InicioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_inicio; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterInicio(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitInicio(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInicio(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InicioContext inicio() {
		InicioContext _localctx = new InicioContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_inicio);
		int _la;
		try {
			State = 59;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 47;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==ID) {
					{
					State = 46; etiqueta();
					}
				}

				State = 50;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==EBSILON) {
					{
					State = 49; Match(EBSILON);
					}
				}

				State = 52; Match(START);
				State = 54;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==EBSILON) {
					{
					State = 53; Match(EBSILON);
					}
				}

				State = 56; Match(NUMERO2);
				State = 57; Match(FINL);
				}
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 58; proposicion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FinContext : ParserRuleContext {
		public ITerminalNode END() { return GetToken(sicxeParser.END, 0); }
		public ITerminalNode FINL() { return GetToken(sicxeParser.FINL, 0); }
		public ITerminalNode EBSILON() { return GetToken(sicxeParser.EBSILON, 0); }
		public EntradaContext entrada() {
			return GetRuleContext<EntradaContext>(0);
		}
		public FinContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fin; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterFin(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitFin(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFin(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FinContext fin() {
		FinContext _localctx = new FinContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_fin);
		int _la;
		try {
			State = 76;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,8,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 62;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==EBSILON) {
					{
					State = 61; Match(EBSILON);
					}
				}

				State = 64; Match(END);
				State = 66;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==ID) {
					{
					State = 65; entrada();
					}
				}

				State = 68; Match(FINL);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 70;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==EBSILON) {
					{
					State = 69; Match(EBSILON);
					}
				}

				State = 72; Match(END);
				State = 74;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==ID) {
					{
					State = 73; entrada();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntradaContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(sicxeParser.ID, 0); }
		public EntradaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entrada; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterEntrada(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitEntrada(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntrada(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntradaContext entrada() {
		EntradaContext _localctx = new EntradaContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_entrada);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProposicionesContext : ParserRuleContext {
		public ProposicionContext[] proposicion() {
			return GetRuleContexts<ProposicionContext>();
		}
		public ProposicionContext proposicion(int i) {
			return GetRuleContext<ProposicionContext>(i);
		}
		public ProposicionesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposiciones; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterProposiciones(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitProposiciones(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposiciones(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionesContext proposiciones() {
		ProposicionesContext _localctx = new ProposicionesContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_proposiciones);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 80; proposicion();
			}
			{
			State = 84;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					{
					{
					State = 81; proposicion();
					}
					} 
				}
				State = 86;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,9,_ctx);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProposicionContext : ParserRuleContext {
		public InstruccionContext instruccion() {
			return GetRuleContext<InstruccionContext>(0);
		}
		public DirectivaContext directiva() {
			return GetRuleContext<DirectivaContext>(0);
		}
		public ProposicionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_proposicion; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterProposicion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitProposicion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProposicion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProposicionContext proposicion() {
		ProposicionContext _localctx = new ProposicionContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_proposicion);
		try {
			State = 89;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,10,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 87; instruccion();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 88; directiva();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstruccionContext : ParserRuleContext {
		public OpinstruccionContext opinstruccion() {
			return GetRuleContext<OpinstruccionContext>(0);
		}
		public ITerminalNode FINL() { return GetToken(sicxeParser.FINL, 0); }
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode EBSILON() { return GetToken(sicxeParser.EBSILON, 0); }
		public InstruccionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instruccion; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterInstruccion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitInstruccion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstruccion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstruccionContext instruccion() {
		InstruccionContext _localctx = new InstruccionContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_instruccion);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ID) {
				{
				State = 91; etiqueta();
				}
			}

			State = 95;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==EBSILON) {
				{
				State = 94; Match(EBSILON);
				}
			}

			State = 97; opinstruccion();
			State = 98; Match(FINL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DirectivaContext : ParserRuleContext {
		public TipoDirectivaContext tipoDirectiva() {
			return GetRuleContext<TipoDirectivaContext>(0);
		}
		public OpDirectivaContext opDirectiva() {
			return GetRuleContext<OpDirectivaContext>(0);
		}
		public ITerminalNode FINL() { return GetToken(sicxeParser.FINL, 0); }
		public EtiquetaContext etiqueta() {
			return GetRuleContext<EtiquetaContext>(0);
		}
		public ITerminalNode[] EBSILON() { return GetTokens(sicxeParser.EBSILON); }
		public ITerminalNode EBSILON(int i) {
			return GetToken(sicxeParser.EBSILON, i);
		}
		public DirectivaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_directiva; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterDirectiva(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitDirectiva(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirectiva(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DirectivaContext directiva() {
		DirectivaContext _localctx = new DirectivaContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_directiva);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==ID) {
				{
				State = 100; etiqueta();
				}
			}

			State = 104;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==EBSILON) {
				{
				State = 103; Match(EBSILON);
				}
			}

			State = 106; tipoDirectiva();
			State = 108;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==EBSILON) {
				{
				State = 107; Match(EBSILON);
				}
			}

			State = 110; opDirectiva();
			State = 111; Match(FINL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TipoDirectivaContext : ParserRuleContext {
		public ITerminalNode BYTE() { return GetToken(sicxeParser.BYTE, 0); }
		public ITerminalNode WORD() { return GetToken(sicxeParser.WORD, 0); }
		public ITerminalNode RESB() { return GetToken(sicxeParser.RESB, 0); }
		public ITerminalNode RESW() { return GetToken(sicxeParser.RESW, 0); }
		public ITerminalNode BASE() { return GetToken(sicxeParser.BASE, 0); }
		public TipoDirectivaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tipoDirectiva; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterTipoDirectiva(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitTipoDirectiva(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTipoDirectiva(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TipoDirectivaContext tipoDirectiva() {
		TipoDirectivaContext _localctx = new TipoDirectivaContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_tipoDirectiva);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 113;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BYTE) | (1L << WORD) | (1L << RESB) | (1L << RESW) | (1L << BASE))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				if (_input.La(1) == TokenConstants.Eof) {
					matchedEOF = true;
				}

				_errHandler.ReportMatch(this);
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EtiquetaContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(sicxeParser.ID, 0); }
		public EtiquetaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_etiqueta; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterEtiqueta(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitEtiqueta(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEtiqueta(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EtiquetaContext etiqueta() {
		EtiquetaContext _localctx = new EtiquetaContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_etiqueta);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OpinstruccionContext : ParserRuleContext {
		public FormatoContext formato() {
			return GetRuleContext<FormatoContext>(0);
		}
		public OpinstruccionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_opinstruccion; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterOpinstruccion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitOpinstruccion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOpinstruccion(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OpinstruccionContext opinstruccion() {
		OpinstruccionContext _localctx = new OpinstruccionContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_opinstruccion);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117; formato();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormatoContext : ParserRuleContext {
		public FormatoUnoContext formatoUno() {
			return GetRuleContext<FormatoUnoContext>(0);
		}
		public FormatoDosContext formatoDos() {
			return GetRuleContext<FormatoDosContext>(0);
		}
		public FormatoTresContext formatoTres() {
			return GetRuleContext<FormatoTresContext>(0);
		}
		public FormatoCuatroContext formatoCuatro() {
			return GetRuleContext<FormatoCuatroContext>(0);
		}
		public FormatoContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formato; } }
		public override void EnterRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.EnterFormato(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsicxeListener typedListener = listener as IsicxeListener;
			if (typedListener != null) typedListener.ExitFormato(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsicxeVisitor<TResult> typedVisitor = visitor as IsicxeVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormato(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormatoContext formato() {
		FormatoContext _localctx = new FormatoContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_formato);
		try {
			State = 123;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case CODOPF1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 119; formatoUno();
				}
				break;
			case CODOPF2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 120; formatoDos();
				}
				break;
			case CODOPF3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 121; formatoTres();
				}
				break;
			case F4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 122; formatoCuatro();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
